Implementing accordion -- 1. fixing CSS for margins, padding, etc. 2. fixing JS so that total # shows up in title when table is collapsed

--- a/public/css/reliable_stylesheet.css
+++ b/public/css/reliable_stylesheet.css
@@ -81,9 +81,9 @@ margin-bottom: 0;
 		font-size: 12px;
 	}
 	
-	.container-fluid {
-		margin-left: 2.5%;
-		margin-right: 2.5%;
+	.container-fluid { /* was 2.5% */
+		margin-left: 1%;
+		margin-right: 1%;
 	}
 	
 	.navbar-form .checkbox input[type=checkbox] {
@@ -469,12 +469,23 @@ border: none;
 background: none;
 padding: 0 0;
 margin: 0 0;
+font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 .ui-accordion-header {
 border: none;
 background: none;
-color: default;
+color: inherit;
 margin: 0 0;
+font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.ui-widget-content a {
+  color: inherit;
+}
+
+#com_total-above,
+#com_total-spacer-above {
+display: none;
 }
 }
